--- a/ui/package.json
+++ b/ui/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "dayjs": "^1.11.10",
+    "lucide-react": "^0.468.0",
     "pocketbase": "^0.22.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
