--- a/ui/package.json
+++ b/ui/package.json
@@ -34,6 +34,7 @@
     "@tabler/icons-react": "^3.2.0",
     "@tanstack/react-table": "^8.16.0",
     "@vercel/analytics": "^1.4.1",
+    "caniuse-lite": "^1.0.30001745",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
